# nih-plug-template

./: README.md  cookiecutter.json
hooks/: post_gen_project.py
{{ cookiecutter.project_name }}/: Cargo.toml  README.md  bundler.toml
{{ cookiecutter.project_name }}/.cargo/: config
{{ cookiecutter.project_name }}/_editors/: README.md  _editor-iced.rs  _editor-vizia.rs
{{ cookiecutter.project_name }}/src/: editor_iced.rs  editor_vizia.rs  lib.rs
