[package]
name = "{{ cookiecutter.project_name }}"
version = "0.1.0"
edition = "2021"
authors = ["{{ cookiecutter.author }} <{{ cookiecutter.email_address }}>"]
description = "{{ cookiecutter.description }}"
license = "{{ cookiecutter.license }}"

[workspace]
members = ["xtask"]

[lib]
crate-type = ["cdylib"]

[dependencies]
# Remove the `assert_process_allocs` feature to allow allocations on the audio
# thread in debug builds.
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = ["assert_process_allocs"] }
# Uncomment the below line to disable the on-by-default VST3 feature to remove
# the GPL compatibility requirement
# nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", default_features = false, features = ["assert_process_allocs"] }
