[package]
name = "{{ cookiecutter.project_name }}"
version = "0.1.0"
edition = "2021"
authors = ["{{ cookiecutter.author }} <{{ cookiecutter.email_address }}>"]
license = "{{ cookiecutter.license }}"
homepage = "{{ cookiecutter.url }}"
description = "{{ cookiecutter.description }}"

[workspace]
members = ["xtask"]

[lib]
crate-type = ["cdylib"]

[dependencies]
# Remove the `assert_process_allocs` feature to allow allocations on the audio
# thread in debug builds.
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = ["assert_process_allocs"] }
# Uncomment the below line to disable the on-by-default VST3 feature to remove
# the GPL compatibility requirement
# nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", default_features = false, features = ["assert_process_allocs"] }
{% if cookiecutter.__vizia == "True" -%}
nih_plug_vizia = { git = "https://github.com/robbert-vdh/nih-plug.git" }
{%- endif %}

{% if cookiecutter.__nogui == "False" -%}
atomic_float = "0.1"
{%- endif %}


[profile.release]
lto = "thin"
strip = "symbols"

[profile.profiling]
inherits = "release"
debug = true
strip = "none"
